2011-07-08  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-sh-handle-start-file-process): Use a
	human-friendly prompt.

2011-07-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc/vc-bzr.el (vc-bzr-revision-keywords): Remove svn, it's only
	provided by a particular plugin.

2011-07-08  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail/sendmail.el (sendmail-query-once): If we aren't allowed to
	save customizations (with "emacs -Q"), just set the variable
	instead of erroring out.

	* mail/smtpmail.el (smtpmail-query-smtp-server): Ditto.

2011-07-08  Juri Linkov  <juri@jurta.org>

	* arc-mode.el (archive-zip-expunge, archive-zip-update)
	(archive-zip-update-case): Use 7z if found by `executable-find'.
	The order of searching the available programs is the same as in
	`archive-zip-extract' (bug#8968).

2011-07-07  Chong Yidong  <cyd@stupidchicken.com>

	* menu-bar.el (menu-bar-line-wrapping-menu): Revert last change.
	(menu-bar-options-menu): Tweak descriptions.

2011-07-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* menu-bar.el (menu-bar-line-wrapping-menu): Make all the Options
	menu items into verb phrases (bug#1421).  Also refill to fit under
	80 columns.

2011-07-07  Chong Yidong  <cyd@stupidchicken.com>

	* info.el (info, Info-read-node-name-2, Info-read-node-name-1)
	(Info-read-node-name): Doc fix (Bug#1084).

	* thingatpt.el (forward-thing, bounds-of-thing-at-point)
	(thing-at-point, beginning-of-thing, end-of-thing, in-string-p)
	(end-of-sexp, beginning-of-sexp)
	(thing-at-point-bounds-of-list-at-point, forward-whitespace)
	(forward-symbol, forward-same-syntax, word-at-point)
	(sentence-at-point): Doc fix (Bug#1144).

2011-07-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* info.el (Info-mode-map): Remove S-TAB binding, since [backtab]
	should cover it (bug#1281).

	* cus-edit.el (custom-show): Mark as obsolete.

	* net/network-stream.el (network-stream-open-starttls): If gnutls