@@ -1,3 +1,7 @@
+2011-07-08  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* abbrev.el (expand-abbrev): Try to preserve point (bug#5805).
+
 2011-07-08  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/tramp-sh.el (tramp-sh-handle-start-file-process): Use a
